--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ buildscript {
 }
 
 group 'io.arctech.solutions'
-version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
@@ -19,11 +18,13 @@ repositories {
     mavenCentral()
 }
 
+
+
 dependencies {
     compile 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-rest:2.3.0-alpha1'
     compile 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-webapp:2.3.0-alpha1'
     compile 'org.codehaus.groovy:groovy-all:2.4.6'
-    compile 'com.h2database:h2:1.4.196'
+    compile 'org.postgresql:postgresql:42.1.4'
     compileOnly('org.projectlombok:lombok')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
