--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,15 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./taskManagement;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://camundadb:5432/camunda
+    username: camunda
+    password: camunda
   application:
     name: task-management
 camunda:
   bpm:
     database:
-      type: h2
+      type: postgres
     enabled: true
     history-level: full
     id-generator: strong
